@startuml
title MD – US12 List Vaccines

hide circle
hide methods
skinparam classAttributeIconSize 0

' ===================== Classes =====================

class DGSAdministrator {
  - name
}

class VaccineType {
  - disease
  - shortDescription
}

class Vaccine {
  - commercialName
  - brand
  - technologyUsed
}

' ===================== Associações =====================

DGSAdministrator "1" -- "0..*" Vaccine : consults >
Vaccine "*" -- "1" VaccineType : is of >

@enduml